snapshots/serde/serde_derive/src/test__dummy.rs.snap
---
source: tests/test.rs
expression: funcspace_struct
---
FuncSpace {
    name: None,
    start_line: 1,
    end_line: 44,
    kind: Unit,
    spaces: [
        FuncSpace {
            name: Some(
                "wrap_in_const",
            ),
            start_line: 7,
            end_line: 40,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 4,
                    closure_nargs: 0,
                    fn_nargs_sum: 4,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 4,
                    closure_nargs_min: 0,
                    fn_nargs_max: 4,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 1,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 1,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 3,
                    structural_sum: 3,
                    structural_min: 3,
                    structural_max: 3,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 4.000,
                    cyclomatic: 4.000,
                    n: 1,
                    cyclomatic_max: 4.000,
                    cyclomatic_min: 4.000,
                },
                halstead: Stats {
                    u_operators: 17,
                    operators: 55,
                    u_operands: 33,
                    operands: 46,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 6,
                        end: 39,
                        unit: fal,
                        sloc_min: 34,
                        sloc_max: 34,
                    },
                    ploc: Ploc {
                        lines: {
                            37,
                            34,
                            31,
                            28,
                            25,
                            22,
                            16,
                            10,
                            7,
                            38,
                            35,
                            32,
                            26,
                            23,
                            20,
                            17,
                            14,
                            11,
                            8,
                            39,
                            36,
                            33,
                            30,
                            27,
                            24,
                            21,
                            18,
                            15,
                            12,
                            9,
                            6,
                        },
                        ploc_min: 31,
                        ploc_max: 31,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 3,
                        lloc_min: 3,
                        lloc_max: 3,
                    },
                    space_count: 1,
                    blank_min: 3,
                    blank_max: 3,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 101.000,
                    halstead_vocabulary: 50.000,
                    halstead_volume: 570.029,
                    cyclomatic: 4.000,
                    sloc: 34.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
        FuncSpace {
            name: Some(
                "unraw",
            ),
            start_line: 42,
            end_line: 44,
            kind: Function,
            spaces: [],
            metrics: CodeMetrics {
                nargs: Stats {
                    fn_nargs: 1,
                    closure_nargs: 0,
                    fn_nargs_sum: 1,
                    closure_nargs_sum: 0,
                    fn_nargs_min: 1,
                    closure_nargs_min: 0,
                    fn_nargs_max: 1,
                    closure_nargs_max: 0,
                    total_functions: 1,
                    total_closures: 0,
                },
                nexits: Stats {
                    exit: 1,
                    exit_sum: 1,
                    total_space_functions: 1,
                    exit_min: 1,
                    exit_max: 1,
                },
                cognitive: Stats {
                    structural: 0,
                    structural_sum: 0,
                    structural_min: 0,
                    structural_max: 0,
                    nesting: 0,
                    total_space_functions: 1,
                    boolean_seq: BoolSequence {
                        boolean_op: None,
                    },
                },
                cyclomatic: Stats {
                    cyclomatic_sum: 1.000,
                    cyclomatic: 1.000,
                    n: 1,
                    cyclomatic_max: 1.000,
                    cyclomatic_min: 1.000,
                },
                halstead: Stats {
                    u_operators: 6,
                    operators: 11,
                    u_operands: 3,
                    operands: 4,
                },
                loc: Stats {
                    sloc: Sloc {
                        start: 41,
                        end: 43,
                        unit: fal,
                        sloc_min: 3,
                        sloc_max: 3,
                    },
                    ploc: Ploc {
                        lines: {
                            41,
                            42,
                            43,
                        },
                        ploc_min: 3,
                        ploc_max: 3,
                    },
                    cloc: Cloc {
                        only_comment_lines: 0,
                        code_comment_lines: 0,
                        comment_line_end: None,
                        cloc_min: 0,
                        cloc_max: 0,
                    },
                    lloc: Lloc {
                        logical_lines: 0,
                        lloc_min: 0,
                        lloc_max: 0,
                    },
                    space_count: 1,
                    blank_min: 0,
                    blank_max: 0,
                },
                nom: Stats {
                    functions: 1,
                    closures: 0,
                    functions_sum: 1,
                    closures_sum: 0,
                    functions_min: 1,
                    functions_max: 1,
                    closures_min: 0,
                    closures_max: 0,
                    space_count: 1,
                },
                mi: Stats {
                    halstead_length: 15.000,
                    halstead_vocabulary: 9.000,
                    halstead_volume: 47.549,
                    cyclomatic: 1.000,
                    sloc: 3.000,
                    comments_percentage: 0.000,
                },
                abc: Stats {
                    assignments: 0.000,
                    assignments_sum: 0.000,
                    assignments_min: 0.000,
                    assignments_max: 0.000,
                    branches: 0.000,
                    branches_sum: 0.000,
                    branches_min: 0.000,
                    branches_max: 0.000,
                    conditions: 0.000,
                    conditions_sum: 0.000,
                    conditions_min: 0.000,
                    conditions_max: 0.000,
                    space_count: 1,
                    declaration: [],
                },
                wmc: Stats {
                    cyclomatic: 0.000,
                    class_wmc: 0.000,
                    interface_wmc: 0.000,
                    class_wmc_sum: 0.000,
                    interface_wmc_sum: 0.000,
                    space_kind: Unknown,
                },
                npm: Stats {
                    class_npm: 0,
                    interface_npm: 0,
                    class_nm: 0,
                    interface_nm: 0,
                    class_npm_sum: 0,
                    interface_npm_sum: 0,
                    class_nm_sum: 0,
                    interface_nm_sum: 0,
                    is_class_space: fal,
                },
                npa: Stats {
                    class_npa: 0,
                    interface_npa: 0,
                    class_na: 0,
                    interface_na: 0,
                    class_npa_sum: 0,
                    interface_npa_sum: 0,
                    class_na_sum: 0,
                    interface_na_sum: 0,
                    is_class_space: fal,
                },
            },
        },
    ],
    metrics: CodeMetrics {
        nargs: Stats {
            fn_nargs: 0,
            closure_nargs: 0,
            fn_nargs_sum: 5,
            closure_nargs_sum: 0,
            fn_nargs_min: 0,
            closure_nargs_min: 0,
            fn_nargs_max: 4,
            closure_nargs_max: 0,
            total_functions: 2,
            total_closures: 0,
        },
        nexits: Stats {
            exit: 0,
            exit_sum: 2,
            total_space_functions: 2,
            exit_min: 0,
            exit_max: 1,
        },
        cognitive: Stats {
            structural: 0,
            structural_sum: 3,
            structural_min: 0,
            structural_max: 3,
            nesting: 0,
            total_space_functions: 2,
            boolean_seq: BoolSequence {
                boolean_op: None,
            },
        },
        cyclomatic: Stats {
            cyclomatic_sum: 6.000,
            cyclomatic: 1.000,
            n: 3,
            cyclomatic_max: 4.000,
            cyclomatic_min: 1.000,
        },
        halstead: Stats {
            u_operators: 18,
            operators: 72,
            u_operands: 38,
            operands: 57,
        },
        loc: Stats {
            sloc: Sloc {
                start: 0,
                end: 44,
                unit: tru,
                sloc_min: 3,
                sloc_max: 34,
            },
            ploc: Ploc {
                lines: {
                    0,
                    43,
                    37,
                    34,
                    31,
                    28,
                    25,
                    22,
                    16,
                    10,
                    7,
                    4,
                    1,
                    41,
                    38,
                    35,
                    32,
                    26,
                    23,
                    20,
                    17,
                    14,
                    11,
                    8,
                    42,
                    39,
                    36,
                    33,
                    30,
                    27,
                    24,
                    21,
                    18,
                    15,
                    12,
                    9,
                    6,
                    3,
                },
                ploc_min: 3,
                ploc_max: 31,
            },
            cloc: Cloc {
                only_comment_lines: 0,
                code_comment_lines: 0,
                comment_line_end: None,
                cloc_min: 0,
                cloc_max: 0,
            },
            lloc: Lloc {
                logical_lines: 3,
                lloc_min: 0,
                lloc_max: 3,
            },
            space_count: 3,
            blank_min: 0,
            blank_max: 3,
        },
        nom: Stats {
            functions: 0,
            closures: 0,
            functions_sum: 2,
            closures_sum: 0,
            functions_min: 0,
            functions_max: 1,
            closures_min: 0,
            closures_max: 0,
            space_count: 3,
        },
        mi: Stats {
            halstead_length: 129.000,
            halstead_vocabulary: 56.000,
            halstead_volume: 749.149,
            cyclomatic: 6.000,
            sloc: 44.000,
            comments_percentage: 0.000,
        },
        abc: Stats {
            assignments: 0.000,
            assignments_sum: 0.000,
            assignments_min: 0.000,
            assignments_max: 0.000,
            branches: 0.000,
            branches_sum: 0.000,
            branches_min: 0.000,
            branches_max: 0.000,
            conditions: 0.000,
            conditions_sum: 0.000,
            conditions_min: 0.000,
            conditions_max: 0.000,
            space_count: 3,
            declaration: [],
        },
        wmc: Stats {
            cyclomatic: 0.000,
            class_wmc: 0.000,
            interface_wmc: 0.000,
            class_wmc_sum: 0.000,
            interface_wmc_sum: 0.000,
            space_kind: Unknown,
        },
        npm: Stats {
            class_npm: 0,
            interface_npm: 0,
            class_nm: 0,
            interface_nm: 0,
            class_npm_sum: 0,
            interface_npm_sum: 0,
            class_nm_sum: 0,
            interface_nm_sum: 0,
            is_class_space: fal,
        },
        npa: Stats {
            class_npa: 0,
            interface_npa: 0,
            class_na: 0,
            interface_na: 0,
            class_npa_sum: 0,
            interface_npa_sum: 0,
            class_na_sum: 0,
            interface_na_sum: 0,
            is_class_space: fal,
        },
    },
}
